Updated .travis.yml